--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
     list-style: none;
 }
 
+a{
+    text-decoration: none;
+}
+
 body{
     width: 100%;
     height: 100vh;
@@ -16,6 +20,10 @@ body{
 
 .column{
     flex-direction: column;
+}
+
+.j-b{
+    justify-content: space-between;
 }
 
 .j-c{
@@ -31,3 +39,89 @@ body{
     align-items: center;
 }
 
+h1{
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 70px;
+    letter-spacing: 2px;
+    color: white;
+}
+
+span {
+    color: #e2012d;
+}
+
+.wrap{
+    width: 100%;
+    height: 100%;
+    min-width: 1900px;
+    min-height: 900px;
+}
+
+nav {
+    position: fixed;
+    top: 20px;
+    width: 100%;
+    height: 10%;
+    min-width: 1900px;
+    padding-inline: 230px;
+    z-index: 999;
+}
+
+nav a{
+    color: white;
+}
+
+nav a:visited{
+    color: white;
+}
+
+nav a:hover{
+    color: #e2012d;
+}
+
+.nav-underline{
+    width: 100%;
+    height: 10px;
+    background: #e2012d;
+    margin-top: 15px;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    background: black;
+}
+
+.main{
+    position: relative;
+}
+
+.main img{
+    padding: 70PX 70PX 0 70PX;
+    z-index: 900;
+}
+
+.main-title{
+    width: 100%;
+    height: 600px;
+    top: 180px;
+    padding-inline: 230px;
+    position: absolute;
+}
+
+.line {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sub-title {
+    position: absolute;
+    color: white;
+    bottom: 30px;
+    z-index: 999;
+}
+
+.sub-title h1 {
+    font-size: 80px;
+}
