--- a/src/index.css
+++ b/src/index.css
@@ -39,12 +39,30 @@ body{
     align-items: center;
 }
 
-h1{
+.section-padding {
+    padding-inline: 230px;
+}
+
+.section-margin {
+    margin-top: 50px;
+}
+
+h1, h2{
     font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 70px;
     letter-spacing: 2px;
     color: white;
+}
+
+h2{
+    font-size: 50PX;
+}
+
+p{
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 30px;
 }
 
 span {
@@ -53,19 +71,19 @@ span {
 
 .wrap{
     width: 100%;
-    height: 100%;
     min-width: 1900px;
     min-height: 900px;
+    background: black;
 }
 
 nav {
-    position: fixed;
+    position: absolute;
     top: 20px;
     width: 100%;
     height: 10%;
     min-width: 1900px;
-    padding-inline: 230px;
     z-index: 999;
+    font-size: 20px;
 }
 
 nav a{
@@ -80,33 +98,29 @@ nav a:hover{
     color: #e2012d;
 }
 
-.nav-underline{
+.section-line{
     width: 100%;
-    height: 10px;
+    height: 5px;
     background: #e2012d;
     margin-top: 15px;
 }
 
-.container {
+.main {
     width: 100%;
-    height: 100%;
-    background: black;
-}
-
-.main{
+    height: 100vh;
     position: relative;
 }
 
 .main img{
-    padding: 70PX 70PX 0 70PX;
+    padding: 100PX 100PX 0 100PX;
     z-index: 900;
+    /* filter: drop-shadow(0px 0px 30px #e2012d); */
 }
 
 .main-title{
     width: 100%;
     height: 600px;
     top: 180px;
-    padding-inline: 230px;
     position: absolute;
 }
 
@@ -125,3 +139,129 @@ nav a:hover{
 .sub-title h1 {
     font-size: 80px;
 }
+
+/* .introduce {
+    min-height: 2000px;
+} */
+
+.season-kill .border{
+    width: 10px;
+    height: 130px;
+    margin-top: 6px;
+    background: #e2012d;
+}
+
+.chart-title {
+    width: 20%;
+}
+
+.inner-header h2{
+    text-align: left;
+    margin-left: 10px;
+    font-size: 40px;
+}
+
+.chart{
+    width: 80%;
+}
+
+.bar-container{
+    margin-bottom: 18px;
+}
+
+.bar-container p{
+    font-size: 26px;
+}
+
+.bar{
+    width: 25px;
+    height: 100px;
+    background: #e2012d;
+    align-items: baseline;
+    margin-bottom: 10px;
+}
+
+.career-inner{
+    width: 50%;
+}
+
+.career-main{
+    width: 45%;
+    margin-inline: 150px;
+    /* filter: drop-shadow(20px 0px 0px #e2012d); */
+}
+
+.career-inner .trophy{
+    width: 60px;
+    filter: grayscale(100%);
+}
+
+.career-inner p{
+    font-size: 37px;
+}
+
+.career-inner ul, li{
+    width: 100%;
+}
+
+.career-inner li{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.history-main{
+    height: 100vh;
+}
+
+.hilight{
+    margin-top: 100px;
+}
+
+.history-inner{
+    width: 50%;
+    height: 600px;
+}
+
+.history-inner.left{
+    border-right: 10px solid #e2012d;
+}
+
+/* .hilight{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-top: 50px;
+    overflow-x: hidden;
+    position: relative;
+}
+
+.button-box{
+    position: absolute;
+    width: 100%;
+    padding-inline: 120px;
+    top: 190px;
+}
+
+.carousel-btn{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background: #e2012d;
+    color: white;
+}
+.scene{
+    width: 100%;
+    margin-inline: 221.5px;
+}
+
+.hilight video{
+    margin: 0;
+    width: 1000px;
+    height: 500px;
+    border: 20px solid #e2012d;
+}
+
+.scene h2{
+    margin-top: 30px;
+} */
