--- a/src/index.css
+++ b/src/index.css
@@ -75,19 +75,13 @@ span {
 
 .wrap{
     width: 100%;
-    min-width: 1900px;
-    min-height: 900px;
     background: black;
 }
 
 nav {
-    position: absolute;
-    top: 20px;
     width: 100%;
-    height: 10%;
-    min-width: 1900px;
-    z-index: 999;
     font-size: 20px;
+    margin-top: 20px;
 }
 
 nav a{
@@ -100,6 +94,30 @@ nav a:visited{
 
 nav a:hover{
     color: #e2012d;
+}
+
+.h-f{
+    color: #e2012d !important;
+}
+
+.h-f:visited{
+    color: #e2012d !important;
+}
+
+.h-f:hover{
+    color: white !important;
+}
+
+nav li {
+    text-align: center;
+}
+
+nav li:first-child{
+    text-align: left;
+}
+
+nav li:last-child{
+    text-align: right;
 }
 
 .section-line{
@@ -116,9 +134,10 @@ nav a:hover{
 }
 
 .main img{
-    padding: 100PX 100PX 0 100PX;
+    height: 90%;
+    position: absolute;
+    bottom: 0;
     z-index: 900;
-    /* filter: drop-shadow(0px 0px 30px #e2012d); */
 }
 
 .main-title{
@@ -143,10 +162,6 @@ nav a:hover{
 .sub-title h1 {
     font-size: 80px;
 }
-
-/* .introduce {
-    min-height: 2000px;
-} */
 
 .season-kill .border{
     width: 10px;
@@ -213,7 +228,7 @@ nav a:hover{
     margin-bottom: 30px;
 }
 
-.history-main{
+.season-main{
     height: 100vh;
 }
 
