--- a/src/index.css
+++ b/src/index.css
@@ -43,8 +43,9 @@ body{
     align-items: center;
 }
 
+
 .section-padding {
-    padding-inline: 230px;
+    padding-inline: 150px;
 }
 
 .section-margin {
@@ -52,60 +53,54 @@ body{
 }
 
 h1, h2{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'R-Spectr', sans-serif;                         
     text-align: center;
-    font-size: 70px;
     letter-spacing: 2px;
-    color: white;
+    color: #f2f5f8;
+}
+
+h1{
+    font-size: 55px;
 }
 
 h2{
-    font-size: 50PX;
+    font-size: 37PX;
 }
 
-p{
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    font-size: 30px;
+a, p{
+    font-family: 'R-Spectr', sans-serif;
+    color: #f2f5f8;
+    font-size: 25px;
 }
 
 span {
-    color: #e2012d;
+    color: #eb0e3a;
 }
 
 .wrap{
     width: 100%;
-    background: black;
+    background: #101011;
 }
 
 nav {
     width: 100%;
-    font-size: 20px;
-    margin-top: 20px;
 }
 
 nav a{
-    color: white;
+    font-size: 20px;
+    font-weight: 550;
+}
+
+nav a{
+    color: #f2f5f8;
 }
 
 nav a:visited{
-    color: white;
+    color: #f2f5f8;
 }
 
 nav a:hover{
-    color: #e2012d;
-}
-
-.h-f{
-    color: #e2012d !important;
-}
-
-.h-f:visited{
-    color: #e2012d !important;
-}
-
-.h-f:hover{
-    color: white !important;
+    color: #eb0e3a;
 }
 
 nav li {
@@ -123,85 +118,122 @@ nav li:last-child{
 .section-line{
     width: 100%;
     height: 5px;
-    background: #e2012d;
-    margin-top: 15px;
+    background: #eb0e3a;
+    margin: auto;
 }
 
 .main {
     width: 100%;
     height: 100vh;
     position: relative;
+    padding-block: 35px;
+    justify-content: space-between;
+    background: #000000;  
+    background: -webkit-linear-gradient(to top, #161616, #000000); 
+    background: linear-gradient(to top, #161616, #000000); 
+
 }
 
-.main img{
+.main-img{
     height: 90%;
     position: absolute;
     bottom: 0;
-    z-index: 900;
+    z-index: 999;
+    filter: brightness(95%)
 }
 
-.main-title{
+.logo-container{
     width: 100%;
-    height: 600px;
-    top: 180px;
-    position: absolute;
+    padding-inline: 150px 100px;
+}
+
+.mid-logo img{
+    height: 100px;
+}
+
+.mid-logo img:last-child{
+    height: 150px;
+}
+
+.sub-title{
+    width: 100%;
 }
 
 .line {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
-.sub-title {
-    position: absolute;
+.main-title {
+    width: 100%;
     color: white;
-    bottom: 30px;
     z-index: 999;
 }
 
-.sub-title h1 {
-    font-size: 80px;
+.season-kill {
+    height: 180px;
+    width: 100%;
 }
 
 .season-kill .border{
     width: 10px;
-    height: 130px;
-    margin-top: 6px;
-    background: #e2012d;
+    height: 80%;
+    margin-block: auto;
+    background: #eb0e3a;
 }
 
 .chart-title {
     width: 20%;
 }
 
+.inner-header{
+    height: 100%;
+    padding-block: 20px;
+}
+
 .inner-header h2{
     text-align: left;
     margin-left: 10px;
-    font-size: 40px;
+    font-size: 27px;
 }
 
 .chart{
     width: 80%;
+    height: 100%;
 }
 
-.bar-container{
-    margin-bottom: 18px;
+.bar-section{
+    height: 180px;
+    margin-block: auto;
+}
+
+.bar-container {
+    
+    display: flex ;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 14px;
 }
 
 .bar-container p{
-    font-size: 26px;
+    font-size: 20px;
 }
 
 .bar{
     width: 25px;
-    height: 100px;
-    background: #e2012d;
-    align-items: baseline;
+    height: 110px;
+    background: #eb0e3a;
     margin-bottom: 10px;
+}
+
+.bar:nth-child(2){
+    height: 20px;
 }
 
 .career-inner{
     width: 50%;
+    height: 320px;
 }
 
 .career-main{
@@ -209,26 +241,65 @@ nav li:last-child{
     margin-inline: 150px;
 }
 
-.career-inner .trophy{
-    width: 60px;
-    filter: grayscale(100%);
-}
-
 .career-inner p{
-    font-size: 37px;
+    font-size: 27px;
+    font-weight: 600;
 }
 
 .career-inner ul, li{
     width: 100%;
 }
 
+.career-inner ul{
+    height: 100%;
+}
+
 .career-inner li{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
 }
 
-.season-main{
+.champion-container{
+    width: 100%;
+}
+
+.champion-container h2{
+    text-align: left;
+    font-size: 25px;
+}
+
+.champ-main{
+    width: 100%;
+    height: 400px;
+    border: 10px solid white;
+}
+
+.champ{
+    width: 14.6999%;
+    height: 100%;
+    border-right: 1px solid gold;
+}
+
+/* .champ-title{
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    padding-block: 60px;
+}
+
+.carousel-btn{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background: #eb0e3a;
+    color: white;
+} */
+
+
+
+/* .season-main{
     height: 100vh;
 }
 
@@ -251,7 +322,7 @@ nav li:last-child{
     height: 60px;
     border-radius: 50%;
     border: none;
-    background: #e2012d;
+    background: #eb0e3a;
     color: white;
     position: absolute;
     top: 35%;
@@ -270,9 +341,71 @@ nav li:last-child{
     margin: 0;
     width: 1000px;
     height: 550px;
-    border: 20px solid #e2012d;
+    border: 20px solid #eb0e3a;
 }
 
 .scene h2{
     margin-top: 30px;
+} */
+
+@media (max-width:600px) {
+
+}
+
+@media (max-width: 900px) {
+.section-padding {
+        padding-inline: 100px;
+    }
+    h1, h2{
+        font-size: 60px;
+    }
+    .main img{
+        height: 90%;
+    }
+    .sub-title h1{
+        font-size: 65px;
+    }
+    .line{
+        margin-bottom: 10px;
+    }
+    .career-inner p,tr{
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 100px) {
+
+    .section-padding {
+        padding-inline: 100px;
+    }
+    h1, h2{
+        font-size: 20px;
+    }
+    .main img{
+        height: 90%;
+    }
+    .line{
+        margin-bottom: 10px;
+    }
+    .career-inner p,tr{
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 1800px) { 
+    .section-padding {
+        padding-inline: 100px;
+    }
+    h1, h2{
+        font-size: 30px;
+    }
+    .main img{
+        height: 90%;
+    }
+    .line{
+        margin-bottom: 10px;
+    }
+    .career-inner p,tr{
+        font-size: 30px;
+    }
 }
