--- a/src/index.css
+++ b/src/index.css
@@ -268,20 +268,28 @@ body{
     padding-block: 35px;
     justify-content: space-between;
     background: linear-gradient(to top, #161616, #000000);
+    overflow: hidden;
 }
 
 .main-img{
-    height: 90%;
     position: absolute;
     bottom: 0;
     z-index: 999;
-    filter: brightness(95%)
+
+    filter: brightness(0%);
+    height: 0%;
+    transition: all 1.5s;
 }
 
 .logo-container{
     width: 100%;
     padding-inline: 150px 100px;
     z-index: 995;
+}
+
+.mid-logo{
+    filter: brightness(0%);
+    transition: all 1.5s;
 }
 
 .mid-logo img{
@@ -299,19 +307,32 @@ body{
 .line {
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
+    opacity: 0;
+    transition: all 1.3s;
+}
+
+.line:nth-child(odd){
+    transform: translateX(-15%);
+}
+
+.line:nth-child(even){
+    transform: translateX(15%);
 }
 
 .main-title {
     width: 100%;
     color: white;
+    transform: translateY(150%);
     z-index: 999;
+
+    transition: all 0.5s;
 }
 
 /* kill graph section */
 
 .season-kill {
     height: 180px;
-    width: 100%;
 }
 
 .season-kill .border{
@@ -347,7 +368,6 @@ body{
 }
 
 .bar-container {
-    
     display: flex ;
     flex-direction: column;
     align-items: center;
@@ -362,9 +382,11 @@ body{
 
 .bar{
     width: 25px;
-    height: 110px;
+    height: 0px;
     background: #eb0e3a;
     margin-bottom: 10px;
+
+    transition: all 0.3s;
 }
 
 .bar:nth-child(2){
@@ -381,8 +403,8 @@ body{
     background-size: cover;
     background-position-x: center;
     transition: all 1s;
-    filter: drop-shadow(0px -3px 15px #494949);
-    
+
+    /* filter: drop-shadow(0px -10px 20px #696868); */
 }
 
 .career-img-container{
@@ -399,8 +421,10 @@ body{
 .career-img-container img{
     transition: all 1s;
     position: absolute;
-    filter: brightness(5%);
-    filter: brightness(92%);
+
+    filter: brightness(0%);
+
+    /* filter: brightness(92%); */
 }
 
 .bg-inner{
@@ -408,7 +432,8 @@ body{
     height: 100px;
     border-radius: 50%;
     transition: all 1s;
-    /* filter: brightness(1%); */
+
+    filter: brightness(0%);
 }
 
 .bg-inner:nth-child(2){
@@ -462,9 +487,12 @@ body{
 }
 
 .champ-main{
-    width: 100%;
+    width: 0%;
     height: 400px;
     position: relative;
+    
+    /* width: 100%; */
+    transition: all 2s;
 }
 
 .champ-container{
