--- a/src/index.css
+++ b/src/index.css
@@ -529,13 +529,13 @@ body{
 
 .history-container{
     position: relative;
-    z-index: 999;
 }
 
 .history-btn-container{
     position: absolute;
     width: 100%;
-    bottom: 0;
+    bottom: 50%;
+    padding-inline: 100px;
     z-index: 999;
 }
 
@@ -547,19 +547,113 @@ body{
     background: transparent;
 }
 
-.history-background{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50%;
-    background-image: url();
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 0;
+.history-main-container{
+    height: 100%;
 }
 
-.history-main{
+.history-main-inner{
+    width: 90%;
+    height: 80%;
+    clip-path: polygon(0 0, 90% 0, 100% 10%, 100% 100%, 80% 100%, 10% 100%, 0 90%, 0% 20%);
+    background: #dd012d;
+}
+
+.history{
+    width: 98%;
+    height: 97%;
+    clip-path: polygon(0 0, 90% 0, 100% 10%, 100% 100%, 80% 100%, 10% 100%, 0 90%, 0% 20%);
+}
+
+.video-container{
+    width: 75%;
     height: 100%;
+    background: black;
+}
+
+.video-inner{
+    height: 70%;
+    padding: 20px 0px 20px 20px;
+}
+
+.video-box{
+    width: 75%;
+    height: 100%;
+    padding-right: 20px;
+}
+
+.video{
+    width: 100%;
+    height: 100%;
+    background: #dd012d;
+}
+
+.video-side{
+    width: 25%;
+    height: 100%;
+    background: #dd012d;
+}
+
+
+.video-info-container{
+    height: 30%;
+    padding: 0 0 20px 20px;
+}
+
+.video-info-inner{
+    width: 75%;
+    height: 100%;
+    padding-right: 20px;
+}
+
+.video-info{
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 100%, 100% 100%, 15% 100%, 0 70%, 0% 20%);
+    background: #dd012d;
+}
+
+.season-champ-info{
+    width: 25%;
+    height: 100%;
+    background: #dd012d;
+}
+
+.season-container{
+    width: 25%;
+    height: 100%;
+    background-color: black;
+}
+
+.season-header-container{
+    width: 100%;
+    height: 25%;
+    padding: 20px;
+}
+
+.season-header{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background: #eb0e3a;
+    clip-path: polygon(0 0, 62% 0, 100% 40%, 100% 100%, 100% 100%, 10% 100%, 0 100%, 0% 20%);
+}
+
+.season-header h1{
+    font-size: 38px;
+    text-align: left;
+}
+
+.season-info-container{
+    width: 100%;
+    height: 75%;
+    padding: 0 20px 20px 20px;
+}
+
+.season-info{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background: #eb0e3a;
 }
 
 /* .history-inner{
