--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,12 @@ a{
 button{
     border: none;
     cursor: pointer;
+    background: transparent;
 }
 
 .hide{
-    width: 0px !important;
     opacity: 0 !important;
+    pointer-events: none;
 }
 
 .flex{
@@ -245,8 +246,6 @@ body{
 
 .wrap{
     width: 100%;
-    background: #161616;
-    overflow-y: hidden;
 }
 
 .main-container-inner{
@@ -318,8 +317,13 @@ body{
     color: white;
     transform: translateY(150%);
     z-index: 999;
-
     transition: all 0.5s;
+}
+
+/* introduce section */
+
+.introduce{
+    background: linear-gradient(to top, #000000, #161616);
 }
 
 /* kill graph section */
@@ -392,8 +396,6 @@ body{
     background-size: cover;
     background-position-x: center;
     transition: all 1s;
-
-    /* filter: drop-shadow(0px -10px 20px #696868); */
 }
 
 .career-img-container{
@@ -529,25 +531,77 @@ body{
 
 .history-container{
     height: 100vh;
+    background: linear-gradient(to top, #161616, #000000);
+    position: relative;
+}
+
+.carousel-nav-container{
+    width: 85%;
+    height: 5%;
+}
+
+.carousel-nav{
+    width: 100%;
+    height: 100%;
+}
+
+.history-container p{
+    font-size: 16px;
 }
 
 .history-carousel-container{
-    width: 80%;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    opacity: 0;
+    scroll-behavior: smooth;
+}
+
+.history-carousel-animate{
+    width: 85%;
     height: 90%;
+    opacity: 1;
+    transition: all 1s;
+}
+
+.info{
+    padding: 15px;
+}
+
+.info ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.info li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .inner-padding{
     padding: 5px;
 }
 
-.inner-border{
-    border-radius: 10px;
-    background: black;
+.inner-bg{
+    background: rgb(16, 16, 16);
+}
+
+.activate{
+    width: 0% !important;
+}
+
+.opacity-activate{
+    opacity: 0;
 }
 
 .history-main{
     width: 100%;
     height: 100%;
+    flex-shrink: 0;
 }
 
 .video-container{
@@ -586,7 +640,7 @@ body{
 }
 
 .team-info img{
-    width: 40%;
+    width: 30%;
 }
 
 .team-introduce{
@@ -594,8 +648,8 @@ body{
     height: 30%;
 }
 
-.team-introduce h2{
-    font-size: 17px;
+.team-introduce .info{
+    height: 80%;
 }
 
 .team-introduce-inner{
@@ -609,7 +663,7 @@ body{
 }
 
 .container-header p{
-    font-size: 21px;
+    font-size: 18px;
 }
 
 .header-line{
@@ -635,7 +689,6 @@ body{
 
 .season-img img{
     width: 100%;
-    border-radius: 13px;
 }
 
 .video-main{
@@ -651,11 +704,14 @@ body{
 .video{
     width: 100%;
     height: 100%;
+    transition: all 0.7s;
 }
 
 .video video{
-    width: 100%;
+    width: 99%;
+    height: 99%;
 }
+
 
 .btn-container{
     width: 100%;
@@ -672,56 +728,28 @@ body{
     height: 10%;
 }
 
-.info{
-    padding: 15px;
-}
-
-.info p{
-    margin-bottom: 10px;
-}
-
-.match p{
-    margin-top: 10px;
-    font-size: 30px !important;
+.button{
+    width: 100%;
+    height: 100%;
+    transition: all 0.7s;
 }
 
 .button .container-header{
-    width: 70%;
+    width: 90%;
+    padding: 0;
     padding-inline: 20px;
 }
 
 .button .info{
-    width: 30%;
-    padding-top: 30px;
+    width: 10%;
+    padding: 0;
+    transition: all 0.2s;
 }
 
 .button-inner{
     width: 50%;
     height: 100%;
-}
-
-.button{
-    width: 100%;
-    height: 100%;
-}
-
-.button-content{
-    width: 100%;
-    height: 100%;
-}
-
-.info ul{
-    width: 100%;
-}
-
-.info li{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.info p{
-    font-size: 21px;
+    transition: all 0.2s;
 }
 
 .match-info-container{
@@ -733,6 +761,15 @@ body{
     width: 100%;
     height: 100%;
     position: relative;
+    transition: all 0.7s;
+}
+
+.match-info-inner p{
+    font-size: 18px;
+}
+
+.match-info-inner li{
+    margin-bottom: 8px;
 }
 
 .match-info-inner .background{
@@ -746,9 +783,9 @@ body{
 
 .match-info-inner .container-header,
 .match-info-inner .info{
-    position: relative;
     width: 40%;
-    z-index: 999;
+    z-index: 0;
+    transition: all 0.2s;
 }
 
 .season-info-container{
@@ -759,6 +796,14 @@ body{
 .season-info{
     width: 100%;
     height: 100%;
+}
+
+.season-info p{
+    font-size: 20px;
+}
+
+.season-info li{
+    margin-bottom: 10px;
 }
 
 .season-champ-container{
@@ -784,7 +829,6 @@ body{
     height: 20%;
 }
 
-
 .season-champ .info{
     height: 80%;
 }
@@ -797,6 +841,10 @@ body{
 .season-champ table p{
     margin-bottom: 0;
     text-align: center;
+}
+
+.season-champ table div{
+    margin: auto;
 }
 
 @media (max-width:600px) {
